# check_internet_connection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO_LIST.txt  build.sh  file.c  format.sh
include/: main_window.hpp  ping.hpp
src/: main.cpp  main_window.cpp  ping.cpp
